# methods-smart

./: .gitignore  CMakeLists.txt  README.md  SolutionTemplate.md  input.txt
src/: main.cpp
src/cpp-files/: Alternative.cpp  Attribute.cpp  AttributeRate.cpp  EffectiveWeight.cpp  NormalizedWeight.cpp  SmartMethod.cpp
src/header-files/: Alternative.h  Attribute.h  AttributeRate.h  EffectiveWeight.h  NormalizedWeight.h  SmartMethod.h
